got the basics working

--- a/views/home.erb
+++ b/views/home.erb
@@ -4,18 +4,22 @@
 
 <br><br>
 <% if @current_user %>
-<a href="/restaurants/new">Add new restaurant</a>
-<br><br>
+	<a href="/restaurants/new">Add new restaurant</a>
+	<br><br>
 
-<h1>List of Restaurants</h1>
-<% @current_user.restaurants.each do |restaurant| %>
-	<div class="restaurant">
-		<ul>
-			<li>
-				<%= restaurant.name %> <br>
-				<%= restaurant.order %>
-			</li>
-		</ul>
-	</div>
-<% end %>
+	<!-- List of restaurants (based on user) -->
+	<h1>List of Restaurants</h1>
+	<% @current_user.ratings.each do |rating| %>
+		<div class="restaurant">
+			<ul>
+				<li>
+					<%= rating.restaurant.name %> <br>
+					<%= rating.restaurant.order %><br>
+					<%= rating.review %><br>
+
+				</li>
+			</ul>
+		</div>
+	<% end %>
+
 <% end %>
