--- a/views/new_restaurant.erb
+++ b/views/new_restaurant.erb
@@ -3,9 +3,19 @@
 
 <form class="restaurant" method="POST" action="/restaurants">
 
-	<label>Name</label><input name="name"/>
-	<label>Order</label><textarea name="order"></textarea>
-
-	<input type="submit">
+	<table>
+		<tr>
+			<td><label>Name</label></td>
+			<td><input name="name"/></td>
+		</tr>
+		<tr>
+			<td><label>Order</label></td>
+			<td><textarea name="order"></textarea></td>
+		</tr>
+		<tr>
+			<td></td>
+			<td><input type="submit"></td>
+		</tr>
+	</table>
 
 </form>
