--- a/views/layout.erb
+++ b/views/layout.erb
@@ -5,6 +5,7 @@
 	<meta charset="UTF-8">
 	<title>Manhattan FiDi Restaurants</title>
 	<link rel="stylesheet" type="text/css" href="/css/default.css">
+	<link href="https://fonts.googleapis.com/css?family=Poppins:500" rel="stylesheet">
 </head>
 <body>
 	<!-- Flash messages appear at the top -->
