--- a/views/login.erb
+++ b/views/login.erb
@@ -1,16 +1,28 @@
 
-<% if @current_user %>
-	<a href="/logout">Logout</a>
-<% else %>
+<div class="login-page">
+	<% if @current_user %>
+		<h4 style="color: white;">
+			Welcome, <span style="color: orange;"><%= @current_user.first %> <%= @current_user.last %></span>.	
+		</h4> 
+	<% else %>
 
-<h3>Login</h3>
+	<form class="login-form" method="POST" action="/login">
+		<table>
+			<tr>
+				<td><label>Username</label></td>
+				<td><input name="username"/></td>
+			</tr>
+			<tr>
+				<td><label>Password</label></td>
+				<td><input name="password" type="password"/></td>
+			</tr>
+		</table>
+			<input type="submit" value="login"/>
+			
+	</form>
 
-<form class="restaurant" method="POST" action="/login">
-	<label>Username</label>
-	<input name="username"/>
-	<label>Password</label>
-	<input name="password" type="password"/>
-	<input type="submit"/>
-</form>
+	<a href="/signup">New user?</a>
 
-<% end %>
+	<% end %>
+
+</div>
