--- a/views/layout.erb
+++ b/views/layout.erb
@@ -6,6 +6,7 @@
 	<title>Manhattan FiDi Restaurants</title>
 	<link rel="stylesheet" type="text/css" href="/css/default.css">
 	<link href="https://fonts.googleapis.com/css?family=Poppins:500" rel="stylesheet">
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.16.2/axios.js"></script>
 </head>
 <body>
 	<!-- Flash messages appear at the top -->
@@ -14,6 +15,7 @@
 
 	<!-- Rest of body text -->
 	<%= yield %>
-	
+
 </body>
 </html>
+
