--- a/public/css/default.css
+++ b/public/css/default.css
@@ -1,5 +1,6 @@
 
 /* All pages */
+
 a {
 	color: orange;
 }
@@ -74,10 +75,35 @@ input[type=submit] {
 	text-transform: uppercase;
 }
 
+/* Restaurant page */
+
+.open-hours {
+	text-align: left;
+	list-style-type: none;
+}
+
 .restaurant-page #map {
 	margin-left: 90px;
 	height: 350px;
 	width: 550px;
+}
+
+.restaurant-page .reviews {
+	text-align: left;
+	list-style-type: none;
+	width: 300px;
+}
+
+.restaurant-page .reviews-list {
+	height: 500px;
+	overflow: scroll;
+
+}
+
+.restaurant-page .reviews-table {
+	text-align: left;
+	font-size: 0.85em;
+	margin-left: 50px;
 }
 
 /* New ratings page */
@@ -151,6 +177,11 @@ input[type=submit] {
     background-repeat:no-repeat;
     color: white;
     border: none;
+}
+
+.signup-button a {
+	margin-top: 10px;
+	padding-right: 25px;
 }
 
 /* Flash banner */
