--- a/views/login.erb
+++ b/views/login.erb
@@ -20,8 +20,8 @@
 			<input type="submit" value="login"/>
 			
 	</form>
-
-	<a href="/signup">New user?</a>
+	<br>
+	<a class="signup-button" href="/signup">New user?</a>
 
 	<% end %>
 
