--- a/views/edit.erb
+++ b/views/edit.erb
@@ -1,6 +1,8 @@
 
 <div class="edit-page">
 	<a href="/"><button class="back-button"><</button></a>
+	<h1>Manhattan FiDi Restaurants</h1>
+	<hr>
 	<h1><%= @restaurant.name %></h1>
 
 	<form class="edit-form" method="post" action="/restaurants/<%= @restaurant.id %>">
