--- a/views/new_restaurant.erb
+++ b/views/new_restaurant.erb
@@ -1,6 +1,8 @@
 
 <div class="new-restaurant-page">
 	<a href="/"><button class="back-button"><</button></a>
+	<h1>Manhattan FiDi Restaurants</h1>
+	<hr>
 	<h1>Submit a new restaurant</h1>
 
 	<form class="restaurant-form" method="POST" action="/restaurants">
