--- a/views/login.erb
+++ b/views/login.erb
@@ -23,6 +23,11 @@
 	<br>
 	<a class="signup-button" href="/signup">New user?</a>
 
+	<div class="examples">
+		Examples:<br>
+		username = ckusuma, password = 1<br>
+		username = vbraxton, password = 2
+	</div>
 	<% end %>
 
 </div>
