--- a/views/signup.erb
+++ b/views/signup.erb
@@ -26,5 +26,5 @@
 			<input type="submit" value="signup"/>
 			
 	</form>
-<div class="bg-image"><img src="/imgs/home.jpg"></div>
+<div class="bg-image"><img src="/imgs/home.jpg" style="width: 1440px;"></div>
 </div>
